Centrat Test login facebook

--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <DOCTYPE !html>
-<html>
+    <html>
+
     <head>
-        <title>Vanilal quote generator</title>
+        <title>Vanilla quote generator</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="./css/style.css"></link>
     </head>
 
-    <body>        
-        <div style="font-family: Armonioso">Citate înțelepte</div>
-        <img style="display: none;" id="start-image" src="./img/template.png" alt="" />
-        <canvas id="memecanvas">
-            Sorry, canvas not supported
-        </canvas>
-
-        <script src="./js/script.js"></script>
+    <body>
+        <div id="content">
+            <div>
+                <div style="font-family: Armonioso">Citate înțelepte</div>
+                <img style="display: none;" id="start-image" src="./img/template.png" alt="" />
+                <canvas id="memecanvas">
+                    Sorry, canvas not supported
+                </canvas>
+            <div>
+            <button id="share-button">Share</button>
+        </div>        
+        <script src="./js/script.js"></script>        
     </body>
-</html>
+
+    </html>
